tests/paczka1/fuzzy1/80470764.err
Error in line 16: l6XTX A352 45,0
Error in line 14: RygzXmKAqIu A840 73,4
Error in line 18: l6XTX A840 45,4
Error in line 40: RygzXmKAqIu A840 49,73
